--- a/services.html
+++ b/services.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Services - Zeros</title>
-
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -60,8 +57,8 @@
     <section class="hero">
       <div id="particles-js"></div>
       <div class="hero-content" id="hero-content">
-        <h1 class="hero-title">Our Services</h1>
-        <p class="hero-subtitle">
+        <h1 class="hero-title" id="typewriter-text">Digital Solutions That Work</h1>
+        <p class="hero-subtitle" id="typewriter-subtitle">
           We offer comprehensive digital solutions to transform your business
         </p>
         <a href="#services" class="cta-button">
