add some more features INR to USD conversion pricing rate and some extra feature and fix the about page fetching

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- Preloader -->
-  <!-- <div class="preloader">
+  <div class="preloader">
       <div class="loader">
         <svg viewBox="0 0 80 80">
           <circle id="test" cx="40" cy="40" r="32"></circle>
@@ -34,12 +34,12 @@
           <rect x="8" y="8" width="64" height="64"></rect>
         </svg>
       </div>
-    </div> -->
+    </div>
 
   <!-- Header -->
   <header>
     <nav>
-      <a href="#" class="logo">ZEROS</a>
+      <a href="index.html" class="logo">ZEROS</a>
       <ul id="first-nav">
         <li>
           <a href="#" class="nav-link"><span>Home</span></a>
@@ -801,7 +801,7 @@
           </iframe>
         </div>
 
-        <form id="contact-form" class="contact-form">
+        <form action="https://formspree.io/f/xrbyedlg" id="contact-form" class="contact-form">
           <div class="form-group">
             <input type="text" id="name" name="name" required />
             <label for="name">Your Name</label>
@@ -836,12 +836,12 @@
         </p>
 
         <div class="currency-toggle">
-          <span class="currency-label">₹</span>
+          <span class="currency-label">₹ INR</span>
           <label class="toggle-switch">
             <input type="checkbox" id="currencyToggle" />
             <span class="slider"></span>
           </label>
-          <span class="currency-label">$</span>
+          <span class="currency-label">$ USD</span>
         </div>
       </div>
       <div class="pricing-cards">
@@ -1154,7 +1154,7 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form class="footer-newsletter-form" id="newsletterForm">
+            <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
               <button type="submit">
                 <i class="fas fa-paper-plane"></i>
