--- a/services.html
+++ b/services.html
@@ -401,7 +401,7 @@
               <p class="footer-newsletter-text">
                 Subscribe to our newsletter for the latest updates and offers
               </p>
-              <form class="footer-newsletter-form" id="newsletterForm">
+              <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
                 <input type="email" placeholder="Enter your email" required />
                 <button type="submit">
                   <i class="fas fa-paper-plane"></i>
