--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
 
           <div class="about-cta">
-            <a href="#project-showcase" class="about-button" id="discover-work-btn">
+            <a href="projects.html" class="about-button" id="discover-work-btn">
               <span>Discover Our Work</span>
               <i class="fas fa-arrow-right"></i>
             </a>
