--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
@@ -34,23 +34,20 @@
             <a href="Contact.html" class="nav-link"><span>Contact</span></a>
           </li>
         </ul>
-        <img
-          src="logo.svg"
-          alt="hamburger"
-          width="30px"
-          height="30px"
-          onclick="showSecondNav()"
-          id="hamburger"
-        />
+        <div id="hamburger" onclick="showSecondNav()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
     </header>
 
     <ul class="second-nav">
-      <li class="second-nav-li">Home</li>
-      <li class="second-nav-li">About</li>
-      <li class="second-nav-li">Services</li>
-      <li class="second-nav-li">Project</li>
-      <li class="second-nav-li">Contact</li>
+      <li class="second-nav-li"><a href="index.html">Home</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
+      <li class="second-nav-li"><a href="services.html">Services</a></li>
+      <li class="second-nav-li"><a href="projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
 
     <!-- Enhanced Hero Section -->
@@ -256,7 +253,7 @@
               <div class="floating-element element-3"></div>
             </div>
             <div class="professional-image">
-              <img src="project1.png" alt="Professional Team" />
+              <img src="./assets/images/project1.png" alt="Professional Team" />
             </div>
           </div>
         </div>
@@ -474,194 +471,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="script.js"></script>
-    <script>
-      // Add specific animations for the services page
-      document.addEventListener("DOMContentLoaded", function () {
-        // Initialize particles.js
-        particlesJS("particles-js", {
-          particles: {
-            number: { value: 80, density: { enable: true, value_area: 800 } },
-            color: { value: "#6a0dad" },
-            shape: { type: "circle" },
-            opacity: { value: 0.5, random: false },
-            size: { value: 3, random: true },
-            line_linked: {
-              enable: true,
-              distance: 150,
-              color: "#6a0dad",
-              opacity: 0.4,
-              width: 1,
-            },
-            move: {
-              enable: true,
-              speed: 6,
-              direction: "none",
-              random: false,
-              straight: false,
-              out_mode: "out",
-              bounce: false,
-            },
-          },
-          interactivity: {
-            detect_on: "canvas",
-            events: {
-              onhover: { enable: true, mode: "repulse" },
-              onclick: { enable: true, mode: "push" },
-              resize: true,
-            },
-            modes: {
-              grab: { distance: 400, line_linked: { opacity: 1 } },
-              bubble: {
-                distance: 400,
-                size: 40,
-                duration: 2,
-                opacity: 8,
-                speed: 3,
-              },
-              repulse: { distance: 200, duration: 0.4 },
-              push: { particles_nb: 4 },
-              remove: { particles_nb: 2 },
-            },
-          },
-          retina_detect: true,
-        });
-
-        // Animate hero content entrance
-        const tl = gsap.timeline();
-        tl.to(".hero-content", {
-          opacity: 1,
-          y: 0,
-          duration: 1,
-          ease: "power2.out",
-        });
-
-        // Animate section header
-        gsap.to(".services-section .section-header", {
-          opacity: 1,
-          y: 0,
-          duration: 1.2,
-          ease: "power2.out",
-          scrollTrigger: {
-            trigger: ".services-section .section-header",
-            start: "top 80%",
-          },
-        });
-
-        // Animate service cards with stagger effect
-        gsap.to(".service-card", {
-          opacity: 1,
-          y: 0,
-          duration: 1,
-          stagger: 0.2,
-          ease: "power2.out",
-          scrollTrigger: {
-            trigger: ".services-grid",
-            start: "top 80%",
-          },
-        });
-
-        // Add tilt effect on hover for service cards
-        document.querySelectorAll(".service-card").forEach((card) => {
-          card.addEventListener("mouseenter", () => {
-            gsap.to(card, {
-              rotationY: 5,
-              rotationX: 5,
-              scale: 1.05,
-              duration: 0.3,
-              ease: "power2.out",
-            });
-          });
-
-          card.addEventListener("mouseleave", () => {
-            gsap.to(card, {
-              rotationY: 0,
-              rotationX: 0,
-              scale: 1,
-              duration: 0.3,
-              ease: "power2.out",
-            });
-          });
-        });
-
-        // Animate Why Choose Us section
-        gsap.to(".why-choose-us .section-header", {
-          opacity: 1,
-          y: 0,
-          duration: 1.2,
-          ease: "power2.out",
-          scrollTrigger: {
-            trigger: ".why-choose-us .section-header",
-            start: "top 80%",
-          },
-        });
-
-        // Animate feature cards with stagger effect
-        gsap.to(".feature-card", {
-          opacity: 1,
-          y: 0,
-          duration: 1,
-          stagger: 0.2,
-          ease: "power2.out",
-          scrollTrigger: {
-            trigger: ".features-grid",
-            start: "top 80%",
-          },
-        });
-
-        // Animate professional section
-        gsap.to(".professional-text", {
-          opacity: 1,
-          x: 0,
-          duration: 1,
-          scrollTrigger: {
-            trigger: ".professional-text",
-            start: "top 80%",
-          },
-        });
-
-        // Counter animation for statistics
-        function animateCounter(element, target) {
-          if (!element || isNaN(target)) {
-            console.error(
-              "Invalid element or target for counter:",
-              element,
-              target
-            );
-            return;
-          }
-
-          let current = 0;
-          const increment = target / 50; // 50 steps
-          const timer = setInterval(() => {
-            current += increment;
-            if (current >= target) {
-              current = target;
-              clearInterval(timer);
-            }
-            element.textContent = Math.round(current);
-            element.style.color = "#6a0dad";
-            element.style.textShadow = "0 0 20px rgba(106, 13, 173, 0.5)";
-          }, 50);
-        }
-
-        // Animate all stat numbers with ScrollTrigger
-        ScrollTrigger.create({
-          trigger: ".stats-container",
-          start: "top 80%",
-          once: true,
-          onEnter: () => {
-            document.querySelectorAll(".stat-number").forEach((stat) => {
-              const target = parseInt(stat.getAttribute("data-target"));
-              if (!isNaN(target)) {
-                setTimeout(() => {
-                  animateCounter(stat, target);
-                }, Math.random() * 500); // Stagger the animations
-              }
-            });
-          },
-        });
-      });
-    </script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/services.js"></script>
   </body>
 </html>
