--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
           <div class="team-member">
             <div class="team-card">
               <div class="member-image">
-                <img src="./assets/images/avtar4.jpeg" alt="Sahil Singh" />
+                <img src="./assets/images/avtar.jpeg" alt="Sahil Singh" />
               </div>
               <div class="member-info">
                 <h2>Sahil Singh</h2>
@@ -345,7 +345,7 @@
           <div class="team-member">
             <div class="team-card">
               <div class="member-image">
-                <img src="./assets/images/avtar.jpeg" alt="Arya Gupta" />
+                <img src="./assets/images/avtar4.jpeg" alt="Arya Gupta" />
               </div>
               <div class="member-info">
                 <h2>Arya Gupta</h2>
