--- a/Purchase.html
+++ b/Purchase.html
@@ -34,7 +34,7 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -48,7 +48,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
-      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+      <li class="second-nav-li"><a href="contact.html">Contact</a></li>
     </ul>
   </header>
 
@@ -316,7 +316,7 @@
         <div class="cta-content">
           <h2>Ready to Get Started?</h2>
           <p>Join thousands of satisfied customers who have transformed their online presence with our services.</p>
-          <a href="Contact.html" class="cta-button">Start Your Free Trial</a>
+          <a href="contact.html" class="cta-button">Start Your Free Trial</a>
         </div>
       </div>
     </section>
