--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -49,7 +49,7 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
-      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+      <li class="second-nav-li"><a href="contact.html">Contact</a></li>
     </ul>
   </header>
 
