--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -72,10 +72,9 @@
       <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
-      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+      <li class="second-nav-li"><a href="contact.html">Contact</a></li>
     </ul>
     <section class="hero">
-      <div id="particles-js"></div>
       <div class="hero-content" id="hero-content">
         <h1 class="hero-title" id="typewriter-text">
           We Craft Digital Experiences
@@ -84,7 +83,7 @@
           Building beautiful, effective websites that drive results. Let's
           create something amazing together.
         </p>
-        <a href="Contact.html" class="cta-button">
+        <a href="contact.html" class="cta-button">
           <span>Get Started</span>
           <i class="fas fa-arrow-right"></i>
         </a>
@@ -154,10 +153,10 @@
             </li>
           </ul>
 
-          <button class="web-cta-button">
-            <a href="Contact.html">Get Started Now</a>
+          <a href="./contact.html" class="web-cta-button">
+            Get Started Now
             <i class="fas fa-arrow-right"></i>
-          </button>
+          </a>
 
           <div class="web-guarantee">
             <i class="fas fa-shield-alt"></i>
@@ -860,7 +859,7 @@
               <i class="fas fa-times-circle"></i> Content Management System
             </li>
           </ul>
-          <a href="Contact.html" class="cta-button">Get Started</a>
+          <a href="contact.html" class="cta-button">Get Started</a>
         </div>
         <!-- Pricing Card 2 (Popular) -->
         <div class="pricing-card popular">
@@ -889,7 +888,7 @@
             <li><i class="fas fa-check-circle"></i> 3 Months Support</li>
             <li><i class="fas fa-check-circle"></i> Analytics Integration</li>
           </ul>
-          <a href="Contact.html" class="cta-button">Get Started</a>
+          <a href="contact.html" class="cta-button">Get Started</a>
         </div>
         <!-- Pricing Card 3 -->
         <div class="pricing-card">
@@ -919,7 +918,7 @@
             <li><i class="fas fa-check-circle"></i> 6 Months Support</li>
             <li><i class="fas fa-check-circle"></i> Custom Integrations</li>
           </ul>
-          <a href="Contact.html" class="cta-button">Get Started</a>
+          <a href="contact.html" class="cta-button">Get Started</a>
         </div>
       </div>
 
@@ -1125,7 +1124,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
 
