--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             <li class="second-nav-li"><a href="about.html">About</a></li>
             <li class="second-nav-li"><a href="projects.html">Project</a></li>
             <li class="second-nav-li"><a href="Purchase.html">Pricing</a></li>
-            <li class="second-nav-li"><a href="contact.html">Contact</a></li>
+            <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
         </ul>
     </header>
 
