update project section

--- a/projects.html
+++ b/projects.html
@@ -217,7 +217,7 @@
                                 <span>Personalization</span>
                                 <span>Branding</span>
                             </div>
-                            <a href="#" class="cta-button">View Case Study <i class="fas fa-arrow-right"></i></a>
+                            <a href="https://gifthampers.xo.je/" class="cta-button">View Case Study <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                                
