--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
                                 <span>Healthcare</span>
                                 <span>Booking System</span>
                             </div>
-                            <a href="#" class="cta-button">View Case Study <i class="fas fa-arrow-right"></i></a>
+                            <a href="https://rg54zp.csb.app/" class="cta-button">View Case Study <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <!-- Project 6 -->
