Enhance SEO and documentation: Add meta tags, .gitignore, and update README
- Added comprehensive SEO meta tags to index.html including description, keywords, OpenGraph, and Twitter cards
- Created .gitignore file to exclude development artifacts and sensitive files
- Updated README.md with professional documentation enhancements:
  * Added table of contents for better navigation
  * Updated project structure to include new files
  * Added SEO enhancement entry to recent improvements
- Confirmed google39a863746aba1b92.html is safe for GitHub (Google site verification)

--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+  <meta name="description" content="Contact Creative Agency Zeros in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
+  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar">
+  <meta name="author" content="Zeros Studio">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Contact Us - Creative Agency Zeros">
+  <meta property="og:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/Contact.html">
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <meta property="og:locale" content="en_IN">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact Us - Creative Agency Zeros">
+  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/Contact.html">
   <title>Creative Agency - Zeros</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/contact.css">
