--- a/about.html
+++ b/about.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+  <meta name="description" content="Learn about Creative Agency Zeros - Our story, vision, and journey in crafting digital experiences. Discover how we transform businesses through innovative design and technology.">
+  <meta name="keywords" content="creative agency, about us, digital transformation, web design, indore, vijaynagar">
+  <meta name="author" content="Zeros Studio">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="About Us - Creative Agency Zeros">
+  <meta property="og:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/about.html">
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <meta property="og:locale" content="en_IN">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About Us - Creative Agency Zeros">
+  <meta name="twitter:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses.">
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/about.html">
   <title>Creative Agency - Zeros</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
