--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+  <meta name="description" content="ZEROS Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
+  <meta name="keywords" content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO">
+  <meta name="author" content="ZEROS Creative Agency">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="ZEROS Creative Agency - Digital Experience Design">
+  <meta property="og:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/">
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <meta property="og:locale" content="en_IN">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ZEROS Creative Agency - Digital Experience Design">
+  <meta name="twitter:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/">
   <title>Creative Agency - Zeros</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/style.css">
