--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+    <meta name="description" content="View our portfolio of creative projects at Zeros Studio - Web design, mobile apps, and branding solutions for clients in Indore and beyond.">
+    <meta name="keywords" content="portfolio, web design projects, mobile apps, branding, creative work, indore">
+    <meta name="author" content="Zeros Studio">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Our Projects - Creative Agency Zeros">
+    <meta property="og:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zerosstudio.vercel.app/projects.html">
+    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+    <meta property="og:locale" content="en_IN">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Projects - Creative Agency Zeros">
+    <meta name="twitter:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries.">
+    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+    <link rel="canonical" href="https://zerosstudio.vercel.app/projects.html">
     <title>Projects - Creative Agency - Zeros</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/projects-styles.css">
