--- a/Purchase.html
+++ b/Purchase.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+  <meta name="description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services in Indore. Choose the perfect plan for your business.">
+  <meta name="keywords" content="pricing, web development, ui/ux design, mobile apps, seo, digital marketing, affordable, creative agency, indore">
+  <meta name="author" content="Zeros Studio">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Pricing Plans - Creative Agency Zeros">
+  <meta property="og:description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/Purchase.html">
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <meta property="og:locale" content="en_IN">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Pricing Plans - Creative Agency Zeros">
+  <meta name="twitter:description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business.">
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/Purchase.html">
   <title>Creative Agency - Zeros</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
