--- a/services.html
+++ b/services.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+    <meta name="description" content="Explore our digital services at Creative Agency Zeros - Web development, UI/UX design, mobile apps, SEO, and brand identity solutions in Indore.">
+    <meta name="keywords" content="web development, ui/ux design, mobile apps, seo, digital marketing, brand identity, creative services, indore">
+    <meta name="author" content="Zeros Studio">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Our Services - Creative Agency Zeros">
+    <meta property="og:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zerosstudio.vercel.app/services.html">
+    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+    <meta property="og:locale" content="en_IN">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Services - Creative Agency Zeros">
+    <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions.">
+    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
+    <link rel="canonical" href="https://zerosstudio.vercel.app/services.html">
     <title>Our Services - Zeros</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
